# IHIFT

./: .gitignore  CMakeLists.txt  Doxyfile  IHIFT.cpp  README  README.md  entity.cpp  entity.hpp  makefile  monster.cpp  monster.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  utils.cpp  utils.hpp
